fix: (z-index circle button fixed)

--- a/css/blocks/_button.scss
+++ b/css/blocks/_button.scss
@@ -69,7 +69,7 @@
   border-radius: 100px;
   background-color: transparent;
   cursor: pointer;
-  z-index: 999;
+  z-index: 2;
   transition: background-color 0.3s;
 
   &:hover {
